--- a/act_edit.css
+++ b/act_edit.css
@@ -1,11 +1,18 @@
 #left-pane {
+    float:left;
+    margin-right:50px;
+    overflow:hidden;  
+}
+
+#right-pane {
+    float:left;
     overflow:hidden;  
 }
 
 #sections {
     height:500px;
     width:250px;
-    border:2px solid black;
+    border:1px solid black;
     float:left;
     margin-right:30px;
     padding:10px;
@@ -14,7 +21,14 @@
 #moves {
     height:500px;
     width:250px;
-    border:2px solid black;
+    border:1px solid black;
     float:left;
     padding:10px;
+}
+
+#youtube {
+    width:480px;
+    height:385px;
+    float:left;
+    border:1px solid black;
 }
