--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,6 @@
+/*
+Reference: http://getbootstrap.com/examples/theme/theme.css
+*/
 body {
   padding-top: 90px;
   
@@ -13,8 +16,9 @@ body {
   margin: 5px 0;
 }
 
-/* Credit to http://stackoverflow.com/questions/20270438/breadcrumb-into-a-navbar-in-bootstrap-3-0-2
-for this. */
+/* 
+Reference: http://stackoverflow.com/questions/20270438/breadcrumb-into-a-navbar-in-bootstrap-3-0-2
+*/
 .nav .breadcrumb {
     margin: 0 7px;
 }
@@ -33,4 +37,24 @@ for this. */
         float: left;
         margin: 7px 10px;
     }
+}
+
+
+/*
+Reference: http://avexdesigns.com/responsive-youtube-embed/
+*/
+.vid {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.vid iframe,
+.vid object,
+.vid embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
