--- a/theme.css
+++ b/theme.css
@@ -1,6 +1,7 @@
 /*
 Reference: http://getbootstrap.com/examples/theme/theme.css
 */
+
 body {
   padding-top: 90px;
   
@@ -16,9 +17,11 @@ body {
   margin: 5px 0;
 }
 
+
 /* 
 Reference: http://stackoverflow.com/questions/20270438/breadcrumb-into-a-navbar-in-bootstrap-3-0-2
 */
+
 .nav .breadcrumb {
     margin: 0 7px;
 }
@@ -43,6 +46,7 @@ Reference: http://stackoverflow.com/questions/20270438/breadcrumb-into-a-navbar-
 /*
 Reference: http://avexdesigns.com/responsive-youtube-embed/
 */
+
 .vid {
     position: relative;
     padding-bottom: 56.25%;
@@ -57,4 +61,29 @@ Reference: http://avexdesigns.com/responsive-youtube-embed/
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+
+/*
+Reference: http://www.abeautifulsite.net/blog/2013/08/whipping-file-inputs-into-shape-with-bootstrap-3/
+*/
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 999px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
