--- a/theme.css
+++ b/theme.css
@@ -87,3 +87,9 @@ Reference: http://www.abeautifulsite.net/blog/2013/08/whipping-file-inputs-into-
     cursor: inherit;
     display: block;
 }
+
+
+.selectedWeapon {
+    font: comic-sans;
+    background: black;
+}
