Still trying to fix add song error. I'm not sure exactly why it's not working, but I'll debug tonight. Adding edit/ remove buttons for section and move

--- a/theme.css
+++ b/theme.css
@@ -87,3 +87,7 @@ Reference: http://www.abeautifulsite.net/blog/2013/08/whipping-file-inputs-into-
     cursor: inherit;
     display: block;
 }
+input[readonly] {
+			background-color: white !important;
+			cursor: text !important;
+		}
