Added edit/ delete buttons to section 1. Need to write javascript to add them dynamically to all sections and moves.

--- a/theme.css
+++ b/theme.css
@@ -94,9 +94,18 @@ input[readonly] {
 		}
 
 
-
 .selectedWeapon {
     font: comic-sans;
     background: black;
 }
+
+
+/* Classes */
+.pull-left {
+  float: left !important;
+}
+.pull-right {
+  float: right !important;
+}
+
 
